--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ body{
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
-    
+    overflow-x: hidden;    
 }
 
 
@@ -15,7 +14,7 @@ body{
 	width: 100%;
 	min-height: 100vh;
 	background-color: #ddd;
-    /*background-image: url(images/bricks-wall-white-brick-wall-white.jpg);*/
+    background-image: url(images/light.jpg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,6 +32,9 @@ body{
     float: left;
 	width: 100%;
     
+}
+.texts:hover{
+    color: blue;
 }
 
 /*.avatar {
@@ -54,8 +56,9 @@ body{
     shape-outside:circle();
 }
 .title{
-	text-align: center;
+	text-align:center;
 	font-size: 28px;
+    margin-bottom: 50px;
 }
 .home .content{
     transition: all 0.3s ease;
@@ -94,16 +97,17 @@ body{
 	color: rgb(255, 255, 255);
 }
 .resume-download .button {
-    background-color: #fff;
+    background-color:slategrey;
     border: none;
     color: #444;
     padding: 12px 30px;
     cursor: pointer;
     font-size: 20px;
-    font-weight: lighter;
+    font-weight: light;
     display:flex;
     align-items: center;
     justify-content: center;
+
  
 }
 .resume-download .button i {
@@ -116,9 +120,7 @@ body{
     background-color: RoyalBlue;
 }
 
-.texts:hover{
-    color: blue;
-}
+
 
 
 /*homeEnd*/
@@ -134,6 +136,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: cover;
 }
 
 .accordion .accordion-button{
@@ -196,6 +199,7 @@ body{
     margin-left: 15px;
     padding-left: 25px;
     padding-bottom: 15px;
+    
 }
 .work ul li:hover::before{
     animation: circle 1.2s infinite;
@@ -206,10 +210,10 @@ body{
 }
 @keyframes circle{
     from {
-      box-shadow: 0 0 0 0px blueviolet
+      box-shadow: 0 0 0 5px blueviolet
     }
     to {
-      box-shadow: 0 0 0 6px green;
+      box-shadow: 0 0 0 13px green;
     }
 }
 .work ul li:first-of-type::before{
@@ -279,6 +283,7 @@ body{
 .skill:hover > div:hover h3 i {
     transform: scale(1.25);
 }
+
 .skill:hover > div:not(:hover) {
     opacity: 0.5;
 }
@@ -352,7 +357,21 @@ body{
 /*projects*/
 .projects-section{
     background-color: grey;
+    width: 100%;
+	min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+.carousel-inner .carousel-item  img {
+    width:50px;
+    height:300px;
+    
+
+}
+
+   
+
 
 /*projectsEnd*/
 
@@ -365,16 +384,18 @@ body{
 .interests-section{
     background-color:orange;
     background-size: cover;
-    display: flexbox;
     width: 100%;
-	min-height: 100vh;
-    
+	min-height: 100vh; 
+    display: flex;
+    align-items: center;
+    justify-content: center;*/
 }
 
 
 /*interestsEnd*/
 
 /*Contact*/
+
 
 .contact-section{
     width: 100%;
@@ -431,12 +452,47 @@ body{
 .fa-linkedin{
     color: #0e76a8;
 }
+.fa-github{
+    color: black
+}
 
 .info li{
     padding-bottom: 10px;
     font-size: 18px;
 }
-    
-
 
 /*ContactEnd*/
+
+/*scrollbar*/
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+::-webkit-scrollbar-track {
+    background: darkslategrey
+}
+  
+::-webkit-scrollbar-thumb {
+    background: lightsalmon
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: green
+   
+}
+
+/*
+.contact .row{
+    height: 100vh;
+    border: 1px; 
+    display:flex;
+}
+.contact-section{
+    width: 100%;
+	min-height: 100vh;
+	background-color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+*/
