--- a/style.css
+++ b/style.css
@@ -8,6 +8,25 @@ body{
     overflow-x: hidden;    
 }
 
+.navbar-light .navbar-nav .nav-link{
+    color: palevioletred ;
+    padding-left: 15px;
+}
+
+.navbar{
+    text-transform: uppercase;
+    padding: 20px;
+    letter-spacing: 3px;
+    font-size:  16px;
+    font-weight: bolder;
+}
+
+
+.navbar-light .navbar-nav .nav-link.hover,
+.navbar-light .navbar-nav .nav-link:hover
+{
+     color: blueviolet;
+}
 
 /*home*/
 .home-section{
@@ -404,6 +423,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    
+}
+
+.contact .row{
+    
 }
 
 .info .ul{
@@ -411,8 +435,10 @@ body{
     padding: 0;
     margin: 0;
 }
+
+
 .info li,h3{
-    color: #fff;
+    color: Black;
 }
 .contact  h3{
     font-size: 30px;
@@ -421,7 +447,7 @@ body{
 }
 
 .contact .bg-custom {
-    background-color: #130f40;
+    background-color: grey;
 }
 .btn-custom {
     background-color: #130f40;
@@ -490,9 +516,8 @@ body{
 .contact-section{
     width: 100%;
 	min-height: 100vh;
-	background-color: grey;
+	background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-*/
+}*/
